using ScheduSquad.Models;

public interface IAvailabilityRepository {
    
    void Add(Availability entity, Guid userId);
}






